    on a big-endian kernel, and works sufficiently well to be able to
    rebuild itself; it has not been tested in little-endian mode.
  * fixed bug 120a: The compiler now deals correctly with IFs where
    the consequent is the same as the alternative, instead of
    misderiving the return type. (thanks to Alexey Dejneka)
  * fixed bug 113: Logical pathnames are now dumpable (the logical
    host is resolved at load-time, throwing an error if it is not
    found).
  * fixed bug 174: FORMAT's error message is slightly clearer when a
    non-printing character is used in a format directive.
  * fixed several bugs in compiler checking of type declarations, i.e.
    violations of the Python "declarations are assertions" principle
    (thanks to Alexey Dejneka)
  * fixed several bugs in PCL's error checking (thanks to Gerd
    Moellmann)
  * fixed bug in printing of FILE-ERROR (thanks to Antonio
    Martinez-Shotton)
  * fixed bug in compilation of functions as first class values
    (thanks to Antonio Martinez-Shotton)
  * The compiler's handling TYPE-ERRORs which it can prove will
    inevitably happen at runtime has been cleaned up and corrected
    in several ways. (thanks to Alexey Dejneka)

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.