@@ -1275,6 +1275,8 @@ changes in sbcl-0.7.8 relative to sbcl-0.7.7:
   * The compiler's handling TYPE-ERRORs which it can prove will
     inevitably happen at runtime has been cleaned up and corrected
     in several ways. (thanks to Alexey Dejneka)
+  * fixed bug 181: compiler checks validity of user supplied type
+    specifiers
 
 planned incompatible changes in 0.7.x:
 * When the profiling interface settles down, maybe in 0.7.x, maybe
